# plate-track-guard-alert

./: .env.example  .gitignore  GateGuard.lnk  GateGuard.spec  KURULUM.md  Kacak Gecis Sistemi.bat  LICENSE  README.md  build.py  config.py  main.py  pyproject.toml  requirements.txt  start.bat
app/: alarm_manager.py  camera.py  database.py  detection_engine.py  mdb_sync.py  models.py  plate_detector.py  routes.py  screenshot.py  tracker.py  websocket_manager.py
app/intrusion/: __init__.py  classifier.py  engine.py  models.py  motion_detector.py  multi_camera.py  night_mode.py  person_detector.py  video_recorder.py  zone_manager.py
docs/: GateGuard-Proje-Teklifi.docx  generate_proposal.js
esp32/: esp32_relay.ino
models/: .gitkeep
scripts/: benchmark_intrusion.py  install_service.bat  seed_cameras.py  uninstall_service.bat
static/: admin.html  alpr-test.html  camera-test.html  index.html  intrusion-test.html  night-watch.html  zone-editor.html
tests/fixtures/intrusion/: README.md
yolo_training/: README.md  extract_frames.py  prepare_kaggle_dataset.py  requirements.txt  setup_dataset.py  test_model.py  test_ocr_pipeline.py  train_yolo.py
